--- a/E05 - LERP/E05 - LERP.vcxproj
+++ b/E05 - LERP/E05 - LERP.vcxproj
@@ -13,7 +13,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{822E40D2-80A1-46EB-AD93-EC28C4F145ED}</ProjectGuid>
     <RootNamespace>E05 - LERP</RootNamespace>
-    <ProjectName>E05 - LERP</ProjectName>
+    <ProjectName>E05 - LERP - Joey Tong</ProjectName>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
