--- a/E05 - LERP/E05 - LERP - Joey Tong.vcxproj
+++ b/E05 - LERP/E05 - LERP - Joey Tong.vcxproj
@@ -12,7 +12,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{822E40D2-80A1-46EB-AD93-EC28C4F145ED}</ProjectGuid>
-    <RootNamespace>E05 - LERP</RootNamespace>
+    <RootNamespace>E05 - LERP - Joey Tong</RootNamespace>
     <ProjectName>E05 - LERP - Joey Tong</ProjectName>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
