--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -428,3 +428,13 @@ Pos=1,1
 Size=323,288
 Collapsed=0
 
+[A04 - Camera_d - About]
+Pos=1,1
+Size=323,114
+Collapsed=0
+
+[A02 - 3D Primitives_d - About]
+Pos=1,1
+Size=323,284
+Collapsed=0
+
